# telecom-ml-framework

./: .gitignore  AUTHOR_INFO.md  LICENSE  README.md  pyproject.toml
docs/: 01-CHURN-PREDICTION.md  02-ROOT-CAUSE-ANALYSIS.md  03-ANOMALY-DETECTION.md  04-QOE-PREDICTION.md  05-CAPACITY-FORECASTING.md  06-NETWORK-OPTIMIZATION.md  GETTING_STARTED.md  PORTFOLIO_OVERVIEW.md  USE_CASES.md
examples/: README.md  create_project.py
template/: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  README_TEMPLATE.md  pyproject.toml
template/.github/workflows/: ci.yml
template/data/processed/: .gitkeep
template/data/raw/: .gitkeep
template/notebooks/: .gitkeep
template/src/__project_name__/: __init__.py  config.py  data_generator.py  features.py  models.py
template/tests/: test_data_quality.py
